fix photo spacing

--- a/about-pages.css
+++ b/about-pages.css
@@ -115,7 +115,7 @@
     height: calc(100% - 60px);
     display: grid;
 
-    align-content: space-around;
+    align-content: flex-start;
     justify-content: space-around;
     
     grid-template-rows: 1fr 1fr 1fr;
